Fix tooltip flickering when it overlaps with cursor

--- a/src/styles/pages/_map.scss
+++ b/src/styles/pages/_map.scss
@@ -504,6 +504,7 @@
         .mapboxgl-popup-content {
           background: none;
           box-shadow: none;
+          pointer-events: none;
         }
       }
     }
